--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://Taaamilaaa.github.io/team__twelve_",
+  "homepage": "https://Rom0105.github.io/my-first-project-on-js",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /team__twelve_/"
+    "build": "parcel build src/*.html --public-url /my-first-project-on-js/"
   },
   "repository": {
     "type": "git",
